--- a/exercicio/desafio012/style.css
+++ b/exercicio/desafio012/style.css
@@ -1,4 +1,12 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
+:root{
+    --font1:Verdana, Geneva, Tahoma, sans-serif;
+    --font2:'Passion One', cursive;
+    --font3:'Sriracha', cursive;
+}
 
 *{
     margin: 0px;
@@ -7,6 +15,7 @@
 html, body{
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--font1);
 }
 header{
     background-color: black;
@@ -16,6 +25,8 @@ header{
 header h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 12vw;
 }
 header p {
     padding-bottom: 50px;
@@ -35,6 +46,8 @@ section {
     padding-bottom: 10%;
     padding-left: 30px;
     line-height: 2em;
+    font-family: var(--font3);
+    font-size: 3.5vw;
 }
 section.normal {  
     background-color: white;
@@ -45,8 +58,9 @@ section.imagem {
     color: white;
 }
 section.imagem > p {
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.733);
-    width: 300px;
 }
 footer{
     color: white;
