--- a/exercicio/ex026/mq004/estilos/media-query.css
+++ b/exercicio/ex026/mq004/estilos/media-query.css
@@ -1,2 +1,64 @@
 @charset "UTF-8";
 /*Todas Demais Médias*/
+/*
+Typical Device Breakpoints
+--------------------------------------
+Pequenas telas: até 600px
+celular: de 600px até 768px
+Tablet: 768px até 992px 
+Desktop: 992px até 1200px
+Grandes telas: acima de 1200px 
+
+*/
+@media print { /*Impressão*/
+    *{
+        font-family: 'Courier New', Courier, monospace;
+    }
+    body{
+        background-image: url(../imagens/back-print.jpg); /*Desnecessário ( não imprime*/
+        
+    }
+    main{border: 2px solid black;}
+    main h1{
+        text-shadow: none;
+        color: black;
+    }
+        img#phone{display: none;}
+        img#tablet{display: none;}
+        img#print{display: block;}
+        img#pc{display: none;}
+        img#tv{display: none;}
+
+}
+@media screen and (min-width: 48em) and (max-width: 62em ) { /*tablet*/
+    body{
+        background-image: url(../imagens/back-tablet.jpg);
+
+        img#phone{display: none;}
+        img#tablet{display: block;}
+        img#print{display: none;}
+        img#pc{display: none;}
+        img#tv{display: none;}
+    }
+}
+@media screen and (min-width: 62em) and (max-width: 124em) { /*Desktop*/
+    body{
+        background-image: url(../imagens/back-pc.jpg);
+    }
+        img#phone{display: none;}
+        img#tablet{display: none;}
+        img#print{display: none;}
+        img#pc{display: block;}
+        img#tv{display: none;}
+}
+@media screen and (min-width: 75em) { /*Grandes Telas*/
+    body{
+        background-image: url(../imagens/back-tv.jpg);
+        img#phone{display: none;}
+        img#tablet{display: none;}
+        img#print{display: none;}
+        img#pc{display: none;}
+        img#tv{display: block;}
+    }
+    
+}
